prevent overflow

--- a/style.css
+++ b/style.css
@@ -74,6 +74,13 @@
 
 .information .information-bio {
     padding-top: 8px;
+
+    /* Limit number of row in bio */
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2; 
+    -webkit-box-orient: vertical;
 }
 
 /* Pagination bar */
